examples/test/testpolicy18379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18379
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key36: value22
      key30: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
          key4: value42
      podSelector:
        matchLabels:
          key35: value49
